samples/_failures_safe/1761074681_9b83f2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8b8a9f88.c:155: error: expected ‘;’, ‘,’ or ‘)’ at end of input
